deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: application
          image: hieutrtr/kafka-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
