service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
    - name: tcp
      port: 8080
      targetPort: 3000
  selector:
    app: kafka
