ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
spec:
  rules:
      - http:
          paths:
            - path: /kafka
              pathType: Prefix
              backend:
                service:
                  name: kafka-service
                  port:
                    number: 80
